app/assets/stylesheets/components/Sola10k.css.scss
@import 'variables';
@import 'bootstrap/mixins';

.sola10k {
  padding-top: 60px;

  .swipe-to-change-color {
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    text-align: center;
    color: #FFFFFF;
    font-size: 23px;
    line-height: 23px;
    height: 23px;
    margin-top: (-23px / 2);
    z-index: 99;
    font-weight: 300;
    white-space: nowrap;
  }

  .container {
    max-width: 540px;
  }

  .image-dropzone {
    max-width: 540px;
    height: 540px;

    .image {
      max-width: 540px;
      height: 545px;
      border-radius: 0;
      border: 3px solid $brand-primary;
      background: #F2F2F2;
    }

    .action-camera-and-text {
      @include helvetica;
      font-size: 23px;
      font-weight: 300;
      color: #999999;
      font-size: 23px;
      line-height: 23px;
      // position: absolute;
      background: asset-data-url('sola10kcamera.png') no-repeat center center;
      background-size: 276px 225px !important;
      //width: 276px;
      height: 225px;
      // padding: 55px 0 0 0;
      // top: 50%;
      // left: 0;
      // right: 0;
      // text-align: center;
      padding: 120px 0 0 0;
      margin: (-276px / 2.15) 0 0 0;
    }

    a.action, a.action:link, a.action:visited, a.action:hover, a.action:active {
      max-width: 525px;
      height: 525px !important;
      border: 3px solid #FFF;
      background: #F2F2F2 !important;
    }

    img.dropzone-image {
      max-width: 540px;
      height: 539px;
      border: 0;
    }
  }

  .header-copy, .name-and-handle-form, .statement-form {

    h1 {
      @include chalet_paris;
      font-size: 49px;
      line-height: 59px;      
      color: #489ad5;
      white-space: nowrap;
      margin-bottom: 40px;
    }

    p {
      @include helvetica;
      font-size: 23px;
      line-height: 43px;
      font-weight: 300;
      color: #000;
      margin: 0 0 40px 0;
      text-align: center;

      &.tighter {
        line-height: 33px;
      }
    }
  }

  .name-and-handle-form {
    margin: 40px auto 0 auto;

    input[type='text'] {

      width: 100%;
      display: block;
      margin: 0 auto 40px auto;
      text-align: center;
      background: transparent !important;
      border: 3px solid #d7d7d7 !important;
      @include helvetica;
      font-size: 23px;
      line-height: 23px;
      font-weight: 300;
      padding: 20px !important;
      height: 88px;
      border-radius: 3px;
    }

    .next {
      text-align: center;

      h3 {
        margin: 40px 0 0 0;
        font-size: 12px;
        line-height: 12px;
      }

      .next-icon {
        display: inline-block;
        background: asset-data-url('down-caret.png') no-repeat center;
        background-size: 14px 7.5px !important;
        width: 14px;
        height: 7.5px;
      }
    }
  }

  .statement-form {
    margin: 10px auto 30px auto;

    h3 {
      margin: 30px 0 25px 0;
    }

    .madlibs {
      @include chalet_paris;
      font-size: 35px;
      line-height: 45px;
      letter-spacing: 0px;
      margin: 60px 0 60px 0;
      text-align: center;

      input[type='text'] {
        position: relative;
        top: -2px;
        width: 100%;
        max-width: 275px;
        height: auto !important;
        margin: 0 2px !important;
        text-align: center;
        padding: 0 0 2px 0 !important;
        background: transparent !important;
        border: 0 !important;
        border-bottom: 2px solid #000 !important;
        // font-family: 'Lato', sans-serif !important;
        // font-size: 18px !important;
        // line-height: 18px !important; 

        //@include helvetica;
        @include chalet_paris;
        font-size: 33px !important;
        line-height: 33px !important;
        font-weight: 300;

        &::-moz-placeholder {
          color: $brand-primary;
        font-size: 33px !important;
        line-height: 33px !important;
        font-weight: 300;
          vertical-align: top;
          opacity: 1; // See https://github.com/twbs/bootstrap/pull/11526
        }
        &:-ms-input-placeholder { 
          color: $brand-primary;
        font-size: 33px !important;
        line-height: 33px !important;
        font-weight: 300;
        } // Internet Explorer 10+
        &::-webkit-input-placeholder  { 
          color: $brand-primary;
        font-size: 33px !important;
        line-height: 33px !important;
        font-weight: 300;
        } // Safari and Chrome
        &:focus::-moz-placeholder {
          color: transparent;
          opacity: 1; // See https://github.com/twbs/bootstrap/pull/11526
        }       
      }
    }
  } /* end .statement-form */

  .bottom-buttons {
    margin: 10px 0 0 0;

    .share-button {
      position: relative;
    }

    .social-share-icons {
      position: absolute;
      bottom: 40px;
      left: 50%;
      margin-left: -60px;
      text-align: center;
      padding: 10px 15px;
      background: #FFF;
      @include box-shadow(0 0 5px rgba(0,0,0,0.5));
      border-radius: 5px;
    }

    .button {
      @include helvetica;
      font-size: 21px !important;
      line-height: 41px !important;
      font-weight: bold !important;
      letter-spacing: 1px;
      color: #000;
      margin: 30px auto 20px auto;
      text-align: center;

      &.disabled {
        opacity: 0.2;
        //pointer-events: none;
        cursor: default;

        &:hover, &:active {
          border: 2px solid #000;
          background: transparent;
          color: #000;
        }
      }
    }

    .start-over {
      margin: 40px 0;
      text-align: center;

      a, a:link, a:visited, a:hover, a:active {
        font-size: 19px;
        line-height: 19px;
        letter-spacing: 1px;
        text-transform: uppercase !important;
        text-decoration: none;
        color: #999;

        &.disabled {
          color: #999;
          opacity: 0.4;
          //pointer-events: none;
          cursor: default;
        }
      }
    }
  }

  .back-to-top {
    cursor: pointer;
    z-index: 999;
    position: fixed;
    bottom: 20px;
    right: 20px;
    background: asset-data-url('back-to-top.png') no-repeat center;
    background-size: 26.5px 26.5px !important;
    width: 26.5px;
    height: 26.5px;
  }
}

.sola10k-tabs {
  margin: 15px auto 0 auto;
  display: block;
  clear: both;
  position: relative;

  .sola10k-tabs-container {
    margin: 0 auto;
    // max-width: 420px;
    text-align: center;
    border-bottom: 1px solid #E6E6E6;
    white-space: nowrap;
  }

  a.sola10k-tab, a.sola10k-tab:link, a.sola10k-tab:visited, a.sola10k-tab:hover, a.sola10k-tab:active {
    position: relative;
    display: inline-block;
    padding: 15px 23px 15px 50px;
    text-transform: uppercase;
    color: #B3B3B3;
    font-weight: bold;
    font-size: 15px;
    text-decoration: none;
    //border-bottom: 2px solid transparent;
    max-width: 50%;
    white-space: nowrap;

    &.active {
      color: #111;
      //border-bottom: 2px solid $brand-primary;
    }
  }

  a.sola10k-tab:hover, a.sola10k-tab:active {
    color: #111;

    &.active {
      color: #111;
    }
  }
}

.sola10k-tabs-content {
  .sola10k-tab-content {
    display: none;
  }
}

#magic-line { 
  position: absolute; 
  bottom: 1px; 
  left: 0; 
  width: 100px; 
  height: 2px; 
  background: $brand-primary; 
}

.sola10k-cup {
  position: absolute;
  top: 12px;
  left: 14px;
  display: block;
  background: asset-data-url('MySola/cup.png') no-repeat center;
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
  opacity: 0.4;
}

.sola10k-camera {
  position: absolute;
  top: 17px;
  left: 16px;
  display: block;
  background: asset-data-url('MySola/camera.png') no-repeat center;
  background-size: 20px 20px;
  width: 20px;
  height: 20px;
  opacity: 0.4;
}

  
.sola10klogo {
  max-width: (498px / 1.2);
}

.sola10kwrapper .owl-carousel .item .item-content.overlayed {
  top: 0;
}

.sola10k-colorpicker {
  margin: 5px 0 0 0;

  .colorswatch {
    display: inline-block;
    height: 16px;
    width: 32%;
    margin-right: 2%;
    border-radius: 4px;
    opacity: 0.4;
    cursor: pointer;

    &:hover {
      opacity: 1;
    }

    &.active {
      opacity: 1;
    }

    &.blue {
      background: $brand-primary;
    }

    &.pink {
      background: $brand-pink;
    }

    &.black {
      background: #000;
      margin-right: 0;
    }
  }
}

@media (max-width: 1150px) {
  .sola10klogo {
    max-width: (498px / 1.5);
  }
}

@media (max-width: 1000px) {
  .sola10klogo {
    max-width: (498px / 1.7);
  }
}

@media (max-width: 900px) {
  .sola10klogo {
    max-width: (498px / 1.9);
  }
}

@media (max-width: 750px) {
  .sola10klogo {
    max-width: (498px / 2);
  }
}

@media (max-width: 650px) {
  .sola10k-tabs {
    a.sola10k-tab, a.sola10k-tab:link, a.sola10k-tab:visited, a.sola10k-tab:hover, a.sola10k-tab:active {
      padding: 15px 18px 15px 45px;
      font-size: 13px;

      .sola10k-cup {
        top: 9px;
        left: 9px;
      }
      .sola10k-camera {
        top: 14px;
        left: 11px;
      }
    }
  }

  .sola10kwrapper {
    .owl-carousel .item .img-wrap {
      height: auto;
    }
    .owl-carousel .item .img-wrap img {
      width: 100%;
      height: auto;
      left: 0;
    }
  }

  .sola10k {
    padding-top: 40px;

    .swipe-to-change-color { 
      font-size: 16px;
      line-height: 16px;
      margin-top: (-16px / 2);
    }

    .header-copy h1, .name-and-handle-form h1, .statement-form h1 {
      white-space: normal;
      font-size: 29px;
      line-height: 39px;
      margin-bottom: 20px;
    }

    .name-and-handle-form input[type='text'] {
      font-size: 16px;
      height: 66px;
    }

    .statement-form .madlibs {
      margin: -25px 0 50px 0;
    }

    .statement-form .madlibs input[type='text'] {
      max-width: 250px;
    }

    .name-and-handle-form {
      margin-top: 20px;
    }

    .header-copy p, .name-and-handle-form p, .statement-form p {
      font-size: 16px;
      line-height: 24px;
      margin-bottom: 20px !important;
    }

    .bottom-buttons .button {
      font-size: 16px !important;
    }

    .bottom-buttons .start-over a, .bottom-buttons .start-over a:link, .bottom-buttons .start-over a:visited, .bottom-buttons .start-over a:hover, .bottom-buttons .start-over a:active {
      font-size: 16px !important;
    }

    .image-dropzone {
      height: 270px;
      width: 270px;

      .image {
        height: 270px !important;
        width: 270px !important;
      }

      img.dropzone-image {
        height: 264px !important;
        width: 264px !important;
      }

      .action-camera-and-text {
        background: asset-data-url('sola10kcamera.png') no-repeat center center;
        background-size: (276px / 2) (225px / 2) !important;
        //width: 276px;
        height: (225px / 2);
        // padding: 55px 0 0 0;
        // top: 50%;
        // left: 0;
        // right: 0;
        // text-align: center;
        padding: 55px 0 0 0;
        margin: -63px 0 0 0;
        font-size: 15px;
        font-weight: bold;
      }
    }
    .image-dropzone a.action, .image-dropzone a.action:link, .image-dropzone a.action:visited, .image-dropzone a.action:hover, .image-dropzone a.action:active {
      height: 248px !important;
      width: 247px !important;
    }
  }
}

